# haskellEX

./: CHANGELOG.md  README.md  build_and_run.sh  execute.ps1  execute.sh  index.html  leetcodeEX.cabal  package.yaml  stack.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
frontend/: example.html  index.html
src/: Lib.hs  Shapes.hs
