cabal-version:      2.4
name:               webserver-example
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ricardo
maintainer:         ricardo.galan@gmx.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib
    build-depends:    base ^>=4.17.2.1,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable webserver-example
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      webserver-example,
                      bytestring,
                      hlint,
                      http-types,
                      scotty,
                      text,
                      wai-cors
    hs-source-dirs:   app
    default-language: Haskell2010
