cabal-version:      2.4
name:           leetcodeEX
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/leetcodeEX#readme>
homepage:       https://github.com/githubuser/leetcodeEX#readme
bug-reports:    https://github.com/githubuser/leetcodeEX/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/leetcodeEX

library
    exposed-modules:  Lib
    build-depends:    base ^>=4.17.2.1,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable leetcodeEX
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      leetcodeEX,
                      bytestring,
                      hlint,
                      http-types,
                      scotty,
                      text,
                      wai-cors
    hs-source-dirs:   app
    default-language: Haskell2010
