cabal-version:      2.4
name:           leetcodeEX
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/riquelmeone/haskellEX/#readme>
homepage:       https://github.com/riquelmeone/haskellEX#readme
bug-reports:    https://github.com/riquelmeone/haskellEX/issues
author:         Ricardo Galan
maintainer:     ricardo.galan@gmx.net
copyright:      2024 Ricardo Galan
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/riquelmeone/haskellEX

library
    exposed-modules:  Lib, Shapes
    build-depends:    base ^>=4.17.2.1,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable leetcodeEX
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      leetcodeEX,
                      bytestring,
                      hlint,
                      http-types,
                      scotty,
                      text,
                      wai-cors
    hs-source-dirs:   app
    default-language: Haskell2010
